Bug 233392 - Message list navigation disabled in new folders
Summary: Message list navigation disabled in new folders
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: misc (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Stephen Kelly
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-04-05 18:58 UTC by Thomas McGuire
Modified: 2010-06-21 15:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-04-05 18:58:15 UTC
When creating new folders, navigating with keyboard shortcuts through the folder is not possible.

To reproduce:
- Create a new subfolder somewhere
- Copy some mails per drag&drop into the new folder
- Click on that folder
-> The arrow buttons in the toolbar are disabled, and the left/right keys don't 
   work anymore
Comment 1 Thomas McGuire 2010-04-06 09:56:13 UTC
This might be model/view related, adding Steve to CC list.
Comment 2 András Manţia 2010-05-15 21:25:27 UTC
I couldn't reproduce with trunk from 2 days ago.
Comment 3 Thomas McGuire 2010-05-17 00:33:08 UTC
I can still reproduce this.
Comment 4 Stephen Kelly 2010-06-21 15:08:29 UTC
SVN commit 1140766 by skelly:

Update statistics each time we get a notification from the server.

Even if item notifications are ignored, their effect on statistics
must be notified.

BUG: 233392

 M  +1 -1      monitor_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140766