Update statistics each time we get a notification from the server.

Even if item notifications are ignored, their effect on statistics
must be notified.

BUG: 233392

svn path=/trunk/KDE/kdepimlibs/; revision=1140766